--- a/Properties/SqlQuery.resx
+++ b/Properties/SqlQuery.resx
@@ -124,7 +124,7 @@ group by p.name
 order by  p.name;</value>
   </data>
   <data name="MinTimeTestWorkQuery" xml:space="preserve">
-    <value>SELECT  p.name, t.name, Min(t.end_time-t.start_time) AS val FROM test t
+    <value>SELECT  p.name as p, t.name as t, Min(t.end_time-t.start_time) AS val FROM test t
                          right join project p on p.id = t.project_id 
                          group by t.name 
                          order by p.name, t.name;</value>
